--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@supabase/supabase-js": "^2.49.8",
+    "@use-gesture/react": "^10.3.1",
     "framer-motion": "^10.16.4",
     "next": "14.0.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-use-gesture": "^9.1.3",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
