--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.49.8",
     "@use-gesture/react": "^10.3.1",
     "framer-motion": "^10.16.4",
+    "lucide-react": "^0.511.0",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
