--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@use-gesture/react": "^10.3.1",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.511.0",
-    "next": "14.0.0",
+    "next": "^14.2.29",
     "react": "^18",
     "react-dom": "^18",
     "react-use-gesture": "^9.1.3",
