🎉 Major Repository Cleanup: V3 is now the main version - Made V3 implementation the main version at root URL - Updated branding from 'V3 Alpha' to 'SwipeOS' - Changed version from '3.0.0-alpha' to '1.0.0' in package.json - Removed old version files and outdated documentation - Fixed all TypeScript errors and build issues - Updated component interfaces for consistency - Build successful

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "swipe-os",
-  "version": "3.0.0-alpha",
+  "version": "1.0.0",
+  "description": "SwipeOS - Mobile-first digital wallet with card-based interface and popup functionality",
   "private": true,
   "scripts": {
     "dev": "next dev",
